--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "pydantic[email]>=2.10.5",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.12",
+]
